# ChangeLog for dev-python/oslo-db
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/oslo-db/ChangeLog,v 1.6 2015/03/18 03:21:13 prometheanfire Exp $

*oslo-db-1.7.1 (18 Mar 2015)

  18 Mar 2015; Matthew Thode <prometheanfire@gentoo.org> +oslo-db-1.7.1.ebuild,
  -oslo-db-1.7.0.ebuild:
  bup

*oslo-db-1.7.0 (13 Mar 2015)

  13 Mar 2015; Matthew Thode <prometheanfire@gentoo.org> +oslo-db-1.7.0.ebuild,
  -oslo-db-1.6.0.ebuild:
  another bump

*oslo-db-1.6.0 (11 Mar 2015)

  11 Mar 2015; Matthew Thode <prometheanfire@gentoo.org> +oslo-db-1.6.0.ebuild:
  bup

*oslo-db-1.4.1 (31 Jan 2015)

  31 Jan 2015; Matthew Thode <prometheanfire@gentoo.org> +oslo-db-1.4.1.ebuild:
  bumping

  21 Nov 2014; Matthew Thode <prometheanfire@gentoo.org> oslo-db-1.0.2.ebuild:
  fixing sqlalchemy dep

*oslo-db-1.0.2 (10 Nov 2014)

  10 Nov 2014; Matthew Thode <prometheanfire@gentoo.org> +metadata.xml,
  +oslo-db-1.0.2.ebuild:
  adding for juno