@@ -4,25 +4,27 @@ Hash: SHA256
 DIST oslo.db-1.0.2.tar.gz 90060 SHA256 7092525eab0352748fc0c58a7facd3d6ae967d9130589b4afc12bfa171bee837 SHA512 77412e531f93966229c6cb866f34cb22c9b97e419f6035f0cb51a093ed218277aed85bf6b8a684b68ceb212ca9f17b0bda8073601cc4a569c3503d2dd1b59311 WHIRLPOOL ccde39e352adf7916b73b9883da1ef3aa99ce862d3dbd4b3ce86c058118cd49a43a50918237e0fb13ce7655cc6a88b3f745a5aee47af9af9e2a431dbb6cd4714
 DIST oslo.db-1.4.1.tar.gz 127166 SHA256 e1fc76e17db9552c42ddca7b95ef8dce9a2049c68b90c0130ed2e27c7a9d82fb SHA512 138bef9fb82d08be9f2d13061689f6f2af7f16e75968d51e423d58a0c6a5bcc12b13a3849dbb0862789256f737e9c3e72be844125bd2cdcfcce0df91b8694ecc WHIRLPOOL 7a98eae42a620699518415f191af4099b4d2cfc8d68392b2d5ae29e90d2f501670110bf19edfd223a55f52b078cb7c26125f7e99fded99eb52715a45afd578d0
 DIST oslo.db-1.7.1.tar.gz 134351 SHA256 21ceab26d3fe4f69e8ec3a7444cff2f13bc8a6e298cc8ffbfbe965f782931b74 SHA512 02f48ec51c4af4eaa76d2ead7c73f5748b6f8340d7d9d304334f44b718b6aa8f841cc7b48166521f6ca6d93d8ee2a33d06570ec99b8ef1b1b628b6aa6d1eb789 WHIRLPOOL 11f2aa7a5a67bc822216cb3694623d5d6121dd9fc48d78e4837c56af589a73b8b43c2b01b8be2e799993e0af8e57972503d4e404f9242dcca1582ca7b17cbba2
+DIST oslo.db-1.8.0.tar.gz 143208 SHA256 0688ced3c34c975e2a68139e0f91601ef43c79fb73308d75674fdc40d30a2d4c SHA512 c97fd671572dc1fdc2bff642e5680f1b8910c737d295ff8d79bed6e4886de46216361de47c1e7f0ac88315988b7d1cd448d6cffff58d906524d8f9ec86d2e582 WHIRLPOOL 70d72ac5f0baf1c01eea040908a2b35336f793b3c7968f218e83a2c1699fd7381ca84cabef9a612069020a1292c3e195047a5795ca6fd9c62b961c68393b3f38
 EBUILD oslo-db-1.0.2.ebuild 1935 SHA256 a2159cc3dffd7c812f764633ccd9543c18ce01c6a5cfe247a2ba7ebce92961a1 SHA512 8b1474668a4046513dfd1ba82e12d86419d7e7f59f1af5f08d028709eba27794b9fc81021536e75a8c220a7443fe76598f6067b1a696645cfc34c7804191496b WHIRLPOOL 7ed406870e5ec9df43f7e392441aebb31b665443aa4d01d1dffc4ccddf76982ee45eaad8e31348431b88f95f2d569b1ba7c587898f955d416b407ec0d8152a51
 EBUILD oslo-db-1.4.1.ebuild 1701 SHA256 cf42d10091ac1a12c62eed4475b75a0b1dbd3fe82d18f05876d955f53adecede SHA512 93780b029dcc06c9cd4c23d3ab1700799d75bd641109cfdbea84084a5581fb3921c4ed4d5550491aa70ce31f941d98b6a57067a638147e3240ea6ecd4d89bd5b WHIRLPOOL 786ac40e3e13e9bbda6f281a235fe6741f6aed65b0ea27f0c07edbb32ea0fcdeaefc2a5bcbc9785f6f9a55b534d1896c902dfee22f87388bf0810a7dca16b273
 EBUILD oslo-db-1.7.1.ebuild 1710 SHA256 851910c5c7be88072dffe190e8482ff769b3a08decfd7ca2966e6ed7913e5a0c SHA512 cd3a60c60cc80645d1fe25fb99b1ee829c7226cfd272aa1f29533c1c76daa8515b18d68cb10f234d9184cbf24314afed320d0dbb75fdcb084b778e949726dda4 WHIRLPOOL b00d035c7442a817d35ba457c8859f24f98a2256633cff25a78a02b4d9844b5deb00c6cdc02df3eb7cd927c766fc306a9e8a086b9ec07fbadbb00fefe7e2820a
-MISC ChangeLog 997 SHA256 cf8ea5d51d93c830976f9623c6fce3e7b8c0efa29909220f66227947764844eb SHA512 c64bc5c9f06b137564ea00de2e947aa30bd4a28fac671d1ab5599d706151e151ed29c52aba889772c8c5f7961d39804556c271739e7e8f5a7c2a33cf96855b10 WHIRLPOOL 374a9f95ab5624b9180e2018b61a4d451dce6114d1d6cadd75917c7613605bf1b46a335b754c903c39da5d485ed386aae7146456dbeb2e5da9c0f8a4019aa56c
+EBUILD oslo-db-1.8.0.ebuild 1710 SHA256 5944e9c312ba3fdde459250be59ec8a4d832617c0fda6e95632a08ae2a6f0a84 SHA512 9ddb00d974f89bb1f02b158bca10429772e5c0216a4a90b7e83e1f45de844e4508aab50490a12e8e37e65423a129b9f5dbfced969952eba732b3e1c90e137df8 WHIRLPOOL 20f7ac6166777ec56b21d51cc6ea6b8ce37ea5ffb5cc8dbe2ac17d0aef47eadbf009e67aaa8688f246a7adc25cc72573c163ab8443cfe45be91c15cc77587413
+MISC ChangeLog 1114 SHA256 b79ce6386519881d26dcca0ce84fef321a9dee8fa71caba249d12160250ac403 SHA512 73d8ec340ba888b1d0443765e72502db2b7ed0ad59aa583cd5752303af4416f097d9f4bb380d678f2e06b7e5c2ec024313d5aab8dfc20a38f86bc8fe06d816b6 WHIRLPOOL 6a32503397f21df818926180a4c8e7f51ddb4efaefb9bc76bc4b59067e85ac1ad543e3337356aeb42544c76c15f6ad659e54a6b9bd51d131553a7aa72a569c58
 MISC metadata.xml 339 SHA256 a8abfdb3fcd5350b36b5822f12e3b6943047a6fe2a5497d0c14812ec394efbe5 SHA512 2fe701bb2c83fb9cd5d8f3ca88f4ed644163407d9c4016d8a92b41d3c6fefa00d789343598df8c209fd7a4fe720829e5ac03e260f918c34a9c3cb668b1a6ea1c WHIRLPOOL 3aad982bcd3daa963e014e80521276dff817db3e8708e3057de5a8cb24260cd7685e0b8172438c774874c15eef84dc349c8fb058d6cb770fa2b3c94b330aa678
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJVCO8uAAoJEGSje+quGaTopR4P/i8LjF8l6MB5hOFAx9a4muqw
-6Fk7T8ue9uulmwnoMy9hIWRsOnmmyJm+j1+i2g5CUK+uIBirOfRUU0WFmrvW042E
-VzI7BjdA3MR87OPXtrWFibXiC0sGpGviJFvAvOQFt+//CYoStLLSHrqtQ8Vcrpv6
-XgHhy/fF3qbHXNSK5qRnHUaZNPf0rwmiEm43kW32e/HOpBkIl2iCtHBIGx+cRngZ
-Tht6j8QR/rSHv4nkeI4sBTcuagiWXNoc2WCDG299Pj+eNGmoVKVT4a/IiKQODUlV
-HpMGhJXC3wKtr2w++34GTnycct6xYTHEAZ5LMb/dsc81bwqJ3mEHlrRBaimDsEje
-9uBhOBhgEmHZzYQur+J9lqHJn27wSaOP2rlnpWH83W28EyC9yW6TmVCNKonvBK9s
-QE2nXek/Gjl2vl92U9GZlqA94nyRlAIWj4EW+aoGV3N2ZFKSW9OO02CFbrY9lLyE
-fpEhrkjPpXPpu3z2Wq9I1vAvVlaBgt1FvNnvES7GaQZvqQAgiRijToN/zv/lrOW5
-IUOMwhP+qLws6ucFWu7tavD7O5cP+gzymNV+SmU1PpVUKW/2Gdv13S+Io9mIfcZR
-btVnXkRwazuF98bmZ6hh0KcZqNFLUelizI18wZkFvzfJO440RgbLWoyIZeoOXFTc
-myphXxleSK1702EQZvhQ
-=Ai4i
+iQIcBAEBCAAGBQJVLUmmAAoJEGSje+quGaToI48QANSmosHYVm4vjoL1mQDsoHuz
+4vE2yvRmx2sPs5QCI/wr4F+nfHlAE9f1fEa6A4Bev+kh3YapiR8/JjCKTZ1SW+9w
+jQV/SPmmd+pnJZJ6W0aDhfq6OA4QzIsKxUbLf0x47MZxIfEt4BDeCVyqytUNkhVm
+xl1brUex8GejPXnr5HCMAF9loyTxGTxDj3mLUBydkBNGoQ+UscmEOLg4IhsEss/q
+Hh3+VYi6CAcW7cVDBPYzlpPqC/Dxdm7xkE5SPX2fV4YSPZcs/iDf+TDCmu4tfa9N
+T0v6AWLXYG27koRxPGaIvSppf/99Y/Vx0dqApZbg9EjyMK6ov6IinTxeWqY5h7Cj
+kZ/I+lmkLRzRq4h0aFXjvdEJnnjMku3A2Hjcx6BrfzVdm8aqEmJ5VraSaimQUkhq
+gMUw6kAHx7eneNKEyzR3Vp3q/1VIk7XmY9E+hFkPdWcK/qGtjFCdtBlr1wzudrcL
+uqP72hLyfjXGngXCp5hqxHuXYYruO+TfZg6rfC/m7US8/neKq+Bti+VZjeNlfACW
+TH0fwzhVS7tUm7dJy2ZO/jgTCl2h9951NRXMbXBeyr1TyqvagSAC5V4sWTfvXV8R
+3SriT8Da1krPlQTIt8ceoyNnxvI6EjzV5PeVFPoCrw3z/ngwwAQlbh+dU00MG2MC
+QSYiP7QROB61Ll61wkwE
+=9S7F
 -----END PGP SIGNATURE-----
