@@ -1,0 +1,14 @@
+DEFINED_PHASES=compile configure install prepare test
+DEPEND=dev-python/setuptools[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] >=dev-python/pbr-0.8.2[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] <dev-python/pbr-1.0.0[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] python_targets_python2_7? ( >=dev-lang/python-2.7.5-r2:2.7 ) >=dev-lang/python-exec-2:=[python_targets_python2_7(-)?,-python_single_target_python2_7(-)]
+DESCRIPTION=OpenStack Common DB Code
+EAPI=5
+HOMEPAGE=http://launchpad.net/oslo
+IUSE=+sqlite mysql postgres python_targets_python2_7
+KEYWORDS=~amd64 ~x86
+LICENSE=Apache-2.0
+RDEPEND=>=dev-python/alembic-0.7.2[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] >=dev-python/Babel-1.3[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] >=dev-python/iso8601-0.1.9[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] >=dev-python/oslo-i18n-1.5.0[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] >=dev-python/oslo-config-1.9.3[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] >=dev-python/oslo-utils-1.4.0[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] sqlite? ( || ( >=dev-python/sqlalchemy-0.9.7[sqlite,python_targets_python2_7(-)?,-python_single_target_python2_7(-)] <=dev-python/sqlalchemy-0.9.99[sqlite,python_targets_python2_7(-)?,-python_single_target_python2_7(-)] ) ) mysql? ( dev-python/mysql-python || ( >=dev-python/sqlalchemy-0.9.7[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] <=dev-python/sqlalchemy-0.9.99[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] ) ) postgres? ( dev-python/psycopg:2 || ( >=dev-python/sqlalchemy-0.9.7[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] <=dev-python/sqlalchemy-0.9.99[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] ) ) >=dev-python/sqlalchemy-migrate-0.9.5[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] >=dev-python/stevedore-1.3.0[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] >=dev-python/six-1.9.0[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] >=dev-python/testresources-0.2.4[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] >=dev-python/testscenarios-0.4[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] python_targets_python2_7? ( >=dev-lang/python-2.7.5-r2:2.7 ) >=dev-lang/python-exec-2:=[python_targets_python2_7(-)?,-python_single_target_python2_7(-)]
+REQUIRED_USE=|| ( mysql postgres sqlite ) || ( python_targets_python2_7 )
+SLOT=0
+SRC_URI=mirror://pypi/o/oslo.db/oslo.db-1.8.0.tar.gz
+_eclasses_=distutils-r1	c01d5c4af34f4a37a51fc9638299c222	eutils	9fb270e417e0e83d64ca52586c4a79de	multibuild	6d4858dc00f8bc51caf3f957f8430eb0	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	multiprocessing	d7f2985a2c76c365ee20269db5261414	python-r1	6d3a3cb5705b9fff1aeb7cfa4e3336fe	python-utils-r1	096f8247eae93026af13ab88cf4305cd	toolchain-funcs	c961250d50160cd37d6b7fd9e8429c92
+_md5_=20b620845c8598f0af52d3800deae6f9
