@@ -1,11 +1,0 @@
-DEFINED_PHASES=install prepare
-DEPEND=net-libs/libpcap net-libs/libnet:1.1
-DESCRIPTION=A utility to see if a specific IP address is taken and what MAC address owns it
-EAPI=5
-HOMEPAGE=http://www.habets.pp.se/synscan/programs.php?prog=arping
-KEYWORDS=alpha amd64 arm hppa ia64 ~mips ppc ppc64 ~s390 ~sh sparc x86 ~x86-fbsd ~amd64-linux ~x86-linux ~x86-macos
-LICENSE=GPL-2
-RDEPEND=net-libs/libpcap net-libs/libnet:1.1
-SLOT=2
-SRC_URI=http://www.habets.pp.se/synscan/files/arping-2.14.tar.gz
-_md5_=2a2ddef6496a0368426fff11daaa82ca
