@@ -1,26 +1,14 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-DIST arping-2.14.tar.gz 147908 SHA256 6cb8f29b3581c2a6c927ae2c4315a6b2d8b3ce688d52aee728e6857148be6f20 SHA512 a99b02422ee7b75bf40a40aa438e7e0c6b04868f525ae2d26b9858bce37fae74cf09797e41d223c75c4abdf77b02e84f9739a80a012917027dc964d1e34e907a WHIRLPOOL 3560b1de16f68cbfdfbdb706d854378518f7dc5b1689dc270c0b9cccbe6a3a6fa22a464b999744eb25fbfb16d867186477fb36561dc930dabe9b6ac6dffdcb2d
 DIST arping-2.15.tar.gz 149061 SHA256 9d45dae3a88749092cef1dd7f5cbb4d3b7be8715a938384ef3139790884251f3 SHA512 89fb5ef1d7663d3577094e250751675ed9bc54fe95fa96d85138a2cf31f422c9b829c90902877bd6dd3f1102194ce0b53af9ef483fbb7e33ce2ae81283b5d52b WHIRLPOOL 2dd43c644f57182c8372c2bc14820352db72309eab594b2797e123af20e3f8af7a6016c22e5b014f93102b689bb7e60ace349f2b14d9ff00d5de944c6e2e4d6f
-EBUILD arping-2.14.ebuild 1212 SHA256 bd049139b40d4f82dd08205e24fa2936611d4405e363d67e3ca6991387223752 SHA512 c0354ca12b136473da424dc694c5322ecc6f3d56547397fb0eb0baf7ab761e44999219b079b1a5da32d0db7e82b584892e42789300970cd6c33c774293715eb4 WHIRLPOOL 2a411157462688e4b890441d6f10c41cdba4f188fc402ec50012d26ed3e16b98d934384909f76bfecdb4347a8903e401e9c8be5d3d188f50efd72c7238cd452d
 EBUILD arping-2.15.ebuild 1162 SHA256 43d08c94d9257187cc735c3f69c2193c51a86ed0d78ef8a5106d9817d3fd1a59 SHA512 77b27d66944519db9e871f9cd7bdde1cbe93783098ba5a1cb14e897be0506f969442e2fed7d8c3cb295f352779f428b3f562c287b0f623e5ae753800d1387214 WHIRLPOOL e3d4522843d3a90882c589de804336c85ab21be86a7131029318ff5224d92e4550ba1ee974bc9e6cf9e7af210dddc1ebca5490c4abda2304e34b733f69b0a529
-MISC ChangeLog 12073 SHA256 fa59292a8fafc08d13675abcc2088e4173970241a0109959138bc5e01310241b SHA512 438677bd274f1a071879aef77e8ba85b0671e71130d9eb9520a4952a51ca9d18b0c4122a65b4a17de28a34f6089f0d485f22514c1b6c49c040211ef74dedb518 WHIRLPOOL 63b44896a536f6776e73f1b7392e95bd6e87844dbbf9eae639c0c4826af1bccda01fd46a2faa9e557cdab608ba31cebfd336516d878cea68158fc7060a6f2754
+MISC ChangeLog 12149 SHA256 7476dca25bc35ed92d9c09664e98c887220f9e0f5206767b099851498050c361 SHA512 305f950c365e49b9891cf599f8f35a856e7c8d7c5d7427d2808a301ba87815ce7e6d004bffc147db6af0df46b54b396a97fce6b9c4822e57555db5282917d8ce WHIRLPOOL 5a447586c4b9299add076bb8da6fedc128e2bc3766d931bea97c2af3109a70847ecea8e5e9cf5818e6a14fc4d15c539de25c81afc611ac05651d5675433d3344
 MISC metadata.xml 159 SHA256 b75c711bd971e46f0ec957e833c60879b0c5023e0bb94409a6255781b69f6dc6 SHA512 2c104d2a804da0a38770b6f1ec26cd5b0a49e30392177d5794734a3f4129e82fd0971e5a8a1e48913bfaf1bab57e7bac1fe5ce4f5c618ce057aa5aaf9e59113b WHIRLPOOL 044dec64f8899582332d7fbd7612d2a7c5c7234c44bb9fc51a56f7d6400cd3066a154c3c49dd3f4b468f11e029aa24ff0097ab1387b9f322d57f1d9876afd601
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJVLPDDAAoJELp701BxlEWfYt8P/0D+LAJw5FQUi9F3SuVZdnK5
-85P9GKUpzipz4FQ3dAthGgjwI/BsP+VDVZCcjXc8ZITv7kx+q/LuZGKAirY7qMeU
-fXOqtSS53BWhvaBTASo3PjBshuibrBHPPGlmbjEb2aZ+8HnM8dwk7ubXkA9loqR3
-tgw+NhNH0zfAx6T1FGnHbgO3zj0gUmXXyHaVoFjk5xK5aOoIwn71s3yRga36Adk3
-/riY6aBLApjPJbJzZRzAJoOoyWRT4l3h1VApUbTMxdYtqKsSBmdT9so7oh9I3Wv2
-r0+ynyA8HV3DtVDYV+Wb8Asd2zo/LbI4ewIgDcPAKZEvtF7rlfCsq3Xdo6ky/0av
-1lWS+myFj6wMsEJAdGOm8cc2YPuTpYnsce1sH0TA7xg/rK1ZPDvguABJACXuXHWC
-FytpfJtmLN7R5kJqSQIOvctf2XzMGPUTlwzeQB0LyzSniRwHoMQYjgY9tZUJIx8I
-4StC1EnYvCp80sPtsDj47U+iEJga4V6CMJt5Z0oB4K28HgtQwk7wDs7ecQTeD6Wr
-hyuraKe9o786UZvqDKHbCgQe3FCOPAgOdsHTFCbBIevA4BsRsY390uj3GaNeL6Ue
-br7vhq1Tv+65ckJMOxEj2JiT7t8VYxmYdWCl/rxtky9c2P9LPUT8pIH/zxdna9Mb
-4EsiSZnnr3KshjntedZh
-=W9eH
+iEYEAREIAAYFAlUtTKcACgkQVWmRsqeSphN2GwCfQywM6bWl1KQLQjpEFwG5peWM
+5koAnjdWxbM+r7Q2K57emYeVcZSxLv/T
+=HHW9
 -----END PGP SIGNATURE-----
