@@ -1,6 +1,9 @@
 # ChangeLog for net-analyzer/arping
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/arping/ChangeLog,v 1.100 2015/04/14 10:49:39 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/arping/ChangeLog,v 1.101 2015/04/14 17:21:42 jer Exp $
+
+  14 Apr 2015; Jeroen Roovers <jer@gentoo.org> -arping-2.14.ebuild:
+  Old.
 
   14 Apr 2015; Agostino Sarubbo <ago@gentoo.org> arping-2.15.ebuild:
   Stable for ia64, wrt bug #543196
