@@ -1,6 +1,11 @@
 # ChangeLog for dev-python/oslo-db
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/oslo-db/ChangeLog,v 1.6 2015/03/18 03:21:13 prometheanfire Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/oslo-db/ChangeLog,v 1.7 2015/04/14 17:08:43 prometheanfire Exp $
+
+*oslo-db-1.8.0 (14 Apr 2015)
+
+  14 Apr 2015; Matthew Thode <prometheanfire@gentoo.org> +oslo-db-1.8.0.ebuild:
+  bup
 
 *oslo-db-1.7.1 (18 Mar 2015)
 
